<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.RegistrationActivity">

    <TextView
        android:id="@+id/tvEnterPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/enter_phone_number"
        android:textAlignment="center"
        android:textColor="@color/colorGray"
        android:textSize="18sp"/>

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/metPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvEnterPhoneNumber"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_shape_white"
        android:digits="0123456789+"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:typeface="monospace"
        app:keep_hint="true"
        mask:allowed_chars="1234567890"
        mask:mask="+7(###)###-####"/>

    <Button
        android:id="@+id/btnGetCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/metPhoneNumber"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_shape_gray"
        android:text="@string/get_code"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnGetCode"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="37dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/colorGray"
        android:textSize="16sp"/>

</RelativeLayout>
