<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.StartUpActivity">

    <TextView
        android:id="@+id/tvEnterPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_phone_number"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"/>

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/metPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvEnterPhoneNumber"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_shape_white"
        android:digits="0123456789+"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:typeface="monospace"
        app:keep_hint="true"
        mask:allowed_chars="1234567890"
        mask:mask="+7(###)###-####"/>


    <TextView
        android:id="@+id/tvCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/metPhoneNumber"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_code"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"/>

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/metCodeSMS"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvCode"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_shape_white"
        android:digits="0123456789"
        android:hint="@string/phone_hint"
        android:imeOptions="actionSend"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:typeface="monospace"
        app:keep_hint="true"
        mask:allowed_chars="1234567890"
        mask:mask="#  #  #  #"/>

    <Button
        android:id="@+id/btnAuth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/metCodeSMS"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_shape_gray"
        android:text="@string/authorization"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAuth"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>
