<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.ConfirmActivity">

    <TextView
        android:id="@+id/tvEnterCodeSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/enter_code_sms"
        android:textAlignment="center"
        android:textColor="@color/colorGray"
        android:textSize="18sp"/>

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/metCodeSMS"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvEnterCodeSMS"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_shape_white"
        android:digits="0123456789"
        android:hint="@string/phone_hint"
        android:imeOptions="actionSend"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorGray"
        android:textSize="18sp"
        android:typeface="monospace"
        app:keep_hint="true"
        mask:allowed_chars="1234567890"
        mask:mask="#  #  #  #"/>

    <TextView
        android:id="@+id/tvResendSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/metCodeSMS"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:text="@string/resend_sms"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        android:visibility="invisible"/>

</RelativeLayout>
